Fixes preloader animation issue on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,14 @@
+html {
+    height: 100%;
+}
+
 body {
     background-color: #ffffff;
 }
 /* Loader */
 #loader {
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 100%;
     background-color: #0a0b0c;
     overflow: hidden;
@@ -30,7 +34,7 @@ body {
 
 #loader #right-panel {
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 200%;
     background: -webkit-linear-gradient(225deg, #0a0b0c 50.1%, rgba(0,0,0,0) 50.1%);
     z-index: 2;
@@ -39,7 +43,7 @@ body {
 
 #loader #left-panel {
     position: absolute;
-    height: 100vh;
+    height: 100%;
     width: 200%;
     background: -webkit-linear-gradient(225deg, rgba(0,0,0,0) 49.9%, #0a0b0c 49.9%);
     z-index: 2;
